fixed mobile spacing in about section

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -32,11 +32,6 @@
 	margin-top: 1.5rem;
 }
 
-.contactName:hover {
-	color: var(--accent-color);
-	text-decoration: underline;
-}
-
 .aboutMe {
 	min-height: 100vh;
 	display: flex;
@@ -77,6 +72,11 @@
 	padding: 0;
 }
 
+.contactName:hover {
+	color: var(--accent-color);
+	text-decoration: underline;
+}
+
 .contact {
 	font-family: 'Inconsolata', monospace;
 }
@@ -104,7 +104,7 @@
 	.aboutTitle {
 		font-weight: 200;
 		align-items: center;
-		margin: 2.2rem 0 0.8rem 0;
+		margin: 1.3rem 0 0.8rem 0;
 	}
 
 	.aboutDesc {
@@ -114,9 +114,17 @@
 		align-items: center;
 	}
 
+	.skills {
+		margin-bottom: -1.2rem;
+	}
+
 	.skillsList {
 		list-style: none;
-		margin: 0 0 1.3rem -8rem;
+		margin: 0 0 2rem -3.4rem;
 		padding: 0;
+	}
+
+	.contactName {
+		margin-bottom: -1.2rem;
 	}
 }
